--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "typings": "./lib/index.d.ts",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
