--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
+    "prima": "^0.0.1",
     "tslint": "^5.20.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
@@ -28,6 +29,7 @@
   ],
   "typings": "./lib/index.d.ts",
   "dependencies": {
+    "@prisma/client": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "swagger-jsdoc": "^6.2.8",
