--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
-    "prima": "^0.0.1",
+    "prisma": "^7.0.0",
     "tslint": "^5.20.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
