--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^7.0.0",
     "tslint": "^5.20.1",
     "tsup": "^8.5.0",
