--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "api-champoions",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dist": "tsup src",
     "start:dev": "tsx --env-file=.env src/server.ts",
@@ -17,6 +16,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "prisma": "^6.9.0",
     "tslint": "^5.20.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
@@ -28,6 +30,7 @@
   ],
   "typings": "./lib/index.d.ts",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "swagger-jsdoc": "^6.2.8",
